--- a/ventoy/scripts/qubes/kickstart.cfg.liquid
+++ b/ventoy/scripts/qubes/kickstart.cfg.liquid
@@ -66,7 +66,7 @@ cp -rf /run/install/repo/.modules/gas-station /mnt/sysimage/etc/ansible
 
 # Copy binaries
 mkdir -p /mnt/sysimage/usr/src/qubes-dom0-binaries
-cp -rf /run/install/repo/.modules/qubes-dom0-binaries /mnt/sysimage/usr/src/qubes-dom0-binaries
+cp -rf /run/install/repo/.modules/gas-station /mnt/sysimage/etc/ansible
 
 # Set up Qubes Ansible connection plugin symlink
 mkdir -p /mnt/sysimage/usr/share/ansible/plugins/connection
