--- a/ventoy/scripts/qubes/kickstart.cfg.liquid.hbs
+++ b/ventoy/scripts/qubes/kickstart.cfg.liquid.hbs
@@ -1,19 +1,76 @@
-# Reference: https://github.com/Qubes-Community/Contents/blob/master/docs/hardware/Autonomous%20Qubes-install%20(kickstart).md
 %pre
-password="{{ kickstart.luksPassword }}"
-echo "autopart --type thinp --encrypted --passphrase=\"$password\"" > /tmp/part-include
-# Wipe first 5GB of each disk to clear random hard-to-erase disk settings
-{{#each kickstart.disks}}
-dd if=/dev/zero of=/dev/{{this}} bs=1000MB count=5
-{{/each}}
+# pre section
+#----- partitioning logic below--------------
+#!/bin/bash
+# pick the first drive that is not removable and is over MINSIZE
+DIR="/sys/block"
+
+# minimum size of hard drive needed specified in GIGABYTES
+# set to 200 to exclude common thumbdrive sizes, and also
+# keep it small enough to cope with VMs
+MINSIZE=200
+
+ROOTDRIVE=""
+
+# /sys/block/*/size is in 512 byte chunks
+for DEV in $(cd $DIR; ls -d nvme?n? sd? hd? 2>/dev/null); do
+  if [ -d $DIR/$DEV ]; then
+    REMOVABLE=`cat $DIR/$DEV/removable`
+    if (( $REMOVABLE == 0 )); then
+      echo $DEV
+      SIZE=`cat $DIR/$DEV/size`
+      GB=$(($SIZE/2**21))
+      if [ $GB -gt $MINSIZE ]; then
+        echo "Found matching drive: $(($SIZE/2**21)) GB"
+        ROOTDRIVE=$DEV
+        break
+      fi
+    fi
+  fi
+done
+
+echo "ROOTDRIVE=$ROOTDRIVE"
+
+cat << EOF >> /tmp/partition-include
+
+ignoredisk --only-use=$ROOTDRIVE
+zerombr
+bootloader --location=mbr --boot-drive=$ROOTDRIVE
+clearpart --all --drives=$ROOTDRIVE --initlabel
+
+# Create partitions required by system type (e.g. /boot/efi)
+reqpart
+
+part /boot --fstype=ext4 --size=1024 --ondisk=$ROOTDRIVE
+part swap --recommended --ondisk=$ROOTDRIVE
+
+part btrfs.main --fstype=btrfs --encrypted --grow --fsoptions="compress=zstd:1,discard=async,space_cache=v2" --passphrase="{{ kickstart.luksPassword }}" --ondisk=$ROOTDRIVE
+
+btrfs none --label=qubes-btrfs btrfs.main
+btrfs / --subvol --name=dom0_root qubes-btrfs
+btrfs /etc --subvol --name=dom0_etc qubes-btrfs
+btrfs /home --subvol --name=dom0_home qubes-btrfs
+btrfs /tmp --subvol --name=dom0_tmp qubes-btrfs
+btrfs /usr --subvol --name=dom0_usr qubes-btrfs
+btrfs /var --subvol --name=dom0_var qubes-btrfs
+btrfs /var/log --subvol --name=dom0_var_log qubes-btrfs
+btrfs /var/lib/qubes --subvol --name=qubes_vms qubes-btrfs
+btrfs /var/lib/qubes/appvms --subvol --name=qubes_appvms qubes-btrfs
+btrfs /var/lib/qubes/backup --subvol --name=qubes_backup qubes-btrfs
+btrfs /var/lib/qubes/updates --subvol --name=qubes_updates qubes-btrfs
+btrfs /var/lib/qubes/vm-kernels --subvol --name=qubes_kernels qubes-btrfs
+btrfs /var/lib/qubes/vm-templates --subvol --name=qubes_templates qubes-btrfs
+
+EOF
 %end
+
+%include /tmp/partition-include
 
 ### Initialize ###
 cdrom
 text
 
 ### Protective Measures ###
-ignoredisk --only-use={{ kickstart.bootDisk }}
 firewall
 network  --hostname=dom0
 authconfig --enableshadow --passalgo=sha512
@@ -24,27 +81,7 @@ rootpw --lock
 keyboard --vckeymap={{ kickstart.keymap }} --xlayouts='{{ kickstart.xlayouts }}'
 lang {{ kickstart.lang }}
 timezone {{ kickstart.timezone }} --isUtc
-# Generate a hashed password with the following line:
-#    python -c 'import crypt,getpass;pw=getpass.getpass();print(crypt.crypt(pw) if (pw==getpass.getpass("Confirm: ")) else exit())'
 user --groups=wheel,qubes --name={{ kickstart.username }} --password={{ execSync (append 'openssl passwd -1 -stdin <<< "' (append kickstart.password '"')) }} --iscryped
-
-### GRUB2 ###
-# With encrypted /boot directory (Password can be generated with GRUB2):
-#    bootloader --location=mbr --boot-drive=change --password=change --iscrypted
-# Without encrypted /boot directory:
-bootloader --location=mbr --boot-drive={{ kickstart.bootDisk }}
-
-### Partitioning ###
-clearpart --all --initlabel --drives={{join kickstart.disks ","}}
-{{#each kickstart.disks}}
-part btrfs.0{{execSync ('echo $((' + @index + ' + 1))') }} --size=6000 --ondisk={{this}}
-{{/each}}
-
-btrfs none --data=0 --metadata=1 --label=qubes{{#each kickstart.disks}} btrfs.0{{execSync (append (append 'echo $((' @index) ' + 1))' ) }}{{/each}}
-btrfs / --subvol --name=root LABEL=rhel7
-btrfs /home --subvol --name=home rhel7
-btrfs
-autopart
 
 ### Initial Boot Settings ###
 xconfig  --startxonboot
@@ -62,10 +99,6 @@ reboot
 set -e
 # Copy playbooks
 mkdir -p /mnt/sysimage/etc/ansible
-cp -rf /run/install/repo/.modules/gas-station /mnt/sysimage/etc/ansible
-
-# Copy binaries
-mkdir -p /mnt/sysimage/usr/src/qubes-dom0-binaries
 cp -rf /run/install/repo/.modules/gas-station /mnt/sysimage/etc/ansible
 
 # Set up Qubes Ansible connection plugin symlink
